# flet-app-template

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
app/: __init__.py  window.py
app/config/: __init__.py  logger.py  settings.py
app/views/: __init__.py  home_view.py
tests/: conftest.py  test_settings.py  test_views.py
